[package]
name = "project-name"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "0.8"
ron = "0.7"

[dependencies.bevy]
version = "0.8"
default-features = false
features = [
    # Bevy functionality:
    "animation",          # Animation support
    "bevy_asset",         # Assets management
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_gilrs",         # Gamepad input support
    "bevy_render",        # Rendering framework core
    "bevy_scene",         # Scenes management
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "bevy_winit",         # Window management
    "filesystem_watcher", # Asset hot-reloading
    "render",             # Graphics Rendering
    "x11",                # Linux: Support X11 windowing system

    # File formats:
    "png",

    # Bevy functionality:
    "wayland",              # Linux: Support Wayland windowing system
    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    "serialize",            # Support for `serde` Serialize/Deserialize

    # Development/Debug features:
    "dynamic",      # Dynamic linking for faster compile-times
    "trace",        # Enable tracing for performance measurement
]

[dependencies.bevy_kira_audio]
version = "0.12"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]